chore: add postcss-js as deps

--- a/packages/theme-transition/scss/index.scss
+++ b/packages/theme-transition/scss/index.scss
@@ -1,22 +1,2 @@
-/* Color Mode transition */
-::view-transition-old(root),
-::view-transition-new(root) {
-  mix-blend-mode: normal;
-  animation: none;
-}
-
-::view-transition-old(root) {
-  z-index: 1;
-}
-
-::view-transition-new(root) {
-  z-index: 2147483646;
-}
-
-.dark::view-transition-old(root) {
-  z-index: 2147483646;
-}
-
-.dark::view-transition-new(root) {
-  z-index: 1;
-}
+@use './mixins';
+@include mixins.theme-transition;
