--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -1,45 +1,26 @@
-/**
- * Any CSS included here will be global. The classic template
- * bundles Infima by default. Infima is a CSS framework designed to
- * work well for content-centric websites.
- */
-// @tailwind base;
-// @tailwind components;
-// @tailwind utilities;
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@use 'theme-transition/scss/mixins.scss' as M;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@include M.theme-transition('[data-theme="dark"]');
 
-/* You can override the default Infima variables here. */
-// :root {
-//   // 微信主色
-//   // #07c160
+@layer components {
+  .btn {
+    @apply inline-flex-center font-bold py-2 px-4 rounded cursor-pointer;
+  }
 
-//   --ifm-color-primary: #2e8555;
-//   --ifm-color-primary-dark: #29784c;
-//   --ifm-color-primary-darker: #277148;
-//   --ifm-color-primary-darkest: #205d3b;
-//   --ifm-color-primary-light: #33925d;
-//   --ifm-color-primary-lighter: #359962;
-//   --ifm-color-primary-lightest: #3cad6e;
-//   --ifm-code-font-size: 95%;
-//   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-// }
+  .btn-pink {
+    @apply btn bg-pink-600 hover:bg-pink-900 text-white;
+  }
+}
 
-// /* For readability concerns, you should choose a lighter palette in dark mode. */
-// [data-theme="dark"] {
-//   --ifm-color-primary: #25c2a0;
-//   --ifm-color-primary-dark: #21af90;
-//   --ifm-color-primary-darker: #1fa588;
-//   --ifm-color-primary-darkest: #1a8870;
-//   --ifm-color-primary-light: #29d5b0;
-//   --ifm-color-primary-lighter: #32d8b4;
-//   --ifm-color-primary-lightest: #4fddbf;
-//   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-// }
+@layer utilities {
+  .inline-flex-center {
+    @apply inline-flex items-center justify-center;
+  }
+}
 
 :root {
-  // https://docusaurus.io/docs/styling-layout#styling-your-site-with-infima
   --ifm-color-primary: #0ea5e9;
   --ifm-color-primary-dark: #0d95d2;
   --ifm-color-primary-darker: #0c8cc6;
@@ -47,63 +28,47 @@
   --ifm-color-primary-light: #1eb0f1;
   --ifm-color-primary-lighter: #2ab4f2;
   --ifm-color-primary-lightest: #4dc0f4;
-
-  // --ifm-color-primary: rgb(14 165 233);
-
-  /*
-  See css var + hsl color palette technique:
-  https://blog.maximeheckel.com/posts/the-power-of-composition-with-css-variables/
-   */
-  // --site-primary-hue-saturation: 167 68%;
-  // --site-primary-hue-saturation-light: 167 56%; /* do we really need this extra one? */
-  // --site-color-favorite-background: #f6fdfd;
-  // --site-color-tooltip: #fff;
-  // --site-color-tooltip-background: #353738;
-  // --site-color-svg-icon-favorite: #e9669e;
-  // --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 25%);
-  // --site-color-feedback-background: #fff;
-  // --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
-  // /* Use a darker color to ensure contrast, ideally we don't need important */
-  // --ifm-breadcrumb-color-active: var(--ifm-color-primary-darker) !important;
-  // --ifm-menu-color-active: var(--ifm-color-primary-darker) !important;
+  --docusaurus-highlighted-code-line-bg: rgb(0 0 0 / 10%);
+  --ifm-toc-border-color: theme('colors.slate.900' / 10%);
 }
 
-// html[data-theme="dark"] {
-//   --site-color-feedback-background: #f0f8ff;
-//   --site-color-favorite-background: #1d1e1e;
-//   --site-color-checkbox-checked-bg: hsl(167deg 56% 73% / 10%);
-//   --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
-// }
+*,
+::after,
+::before {
+  box-sizing: border-box;
+  border: 0 solid #e5e7eb;
+}
 
-// /*
-//  * This selector will be dynamically replaced by the color generator. Don't put
-//  * other properties here.
-//  */
-// [data-theme="light"] {
-//   --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 30%);
-//   --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 26%);
-//   --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 23%);
-//   --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 17%);
+html[data-theme='dark'] {
+  --docusaurus-highlighted-code-line-bg: rgb(66 66 66 / 35%);
+  --ifm-background-color: theme('colors.slate.900');
+  --ifm-navbar-background-color: theme('colors.slate.900');
 
-//   --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 39%);
-//   --ifm-color-primary-lighter: hsl(var(--site-primary-hue-saturation-light) 47%);
-//   --ifm-color-primary-lightest: hsl(var(--site-primary-hue-saturation-light) 58%);
-// }
+  /* --ifm-navbar-background-color: initial; */
 
-// /*
-//  * This selector will be dynamically replaced by the color generator. Don't put
-//  * other properties here.
-//  */
-// [data-theme="dark"] {
-//   --ifm-color-primary: hsl(var(--site-primary-hue-saturation) 45%);
-//   --ifm-color-primary-dark: hsl(var(--site-primary-hue-saturation) 41%);
-//   --ifm-color-primary-darker: hsl(var(--site-primary-hue-saturation) 38%);
-//   --ifm-color-primary-darkest: hsl(var(--site-primary-hue-saturation) 32%);
+  --ifm-toc-border-color: theme('colors.slate.50' / 6%);
 
-//   --ifm-color-primary-light: hsl(var(--site-primary-hue-saturation-light) 54%);
-//   --ifm-color-primary-lighter: hsl(var(--site-primary-hue-saturation-light) 62%);
-//   --ifm-color-primary-lightest: hsl(var(--site-primary-hue-saturation-light) 73%);
-// }
+  /* --ifm-navbar-background-color: rgb(15 23 42); */
+
+  /* background-color: rgb(15 23 42 / var(--tw-bg-opacity)); */
+  --ifm-navbar-link-color: theme('colors.slate.200');
+  --docsearch-text-color: theme('colors.slate.200');
+  --ifm-font-color-base: theme('colors.slate.200');
+}
+
+.navbar {
+  @apply lg:border-b lg:border-slate-900/10 dark:border-slate-50/[0.06];
+
+  /* bg-white/95; */
+
+  /* dark:bg-transparent; */
+
+  /* backdrop-blur */
+}
+
+.footer {
+  @apply lg:border-t lg:border-slate-900/10 dark:border-slate-50/[0.06] dark:bg-transparent;
+}
 
 [data-theme='light'] .DocSearch {
   /* --docsearch-primary-color: var(--ifm-color-primary); */
@@ -155,8 +120,7 @@
 }
 
 .from-weapp-to-tailwindcss {
-  // mask-image: linear-gradient(to right, #07c160 0% 50%, red 50%);
+  color: transparent;
   background-image: linear-gradient(to right, #07c160 50%, theme('colors.sky.500') 50%);
   background-clip: text;
-  color: transparent;
 }
