--- a/demo/web/index.css
+++ b/demo/web/index.css
@@ -74,7 +74,7 @@
 }
 .text-\[\#fafafa\] {
     --tw-text-opacity: 1;
-    color: rgb(250 250 250 / var(--tw-text-opacity))
+    color: rgb(250 250 250 / var(--tw-text-opacity, 1))
 }
 .text-\[color\:32rpx\] {
     color: 32rpx
