chore: @weapp-vite-keep-import 'xx';

--- a/apps/vite-native/pages/index/index.scss
+++ b/apps/vite-native/pages/index/index.scss
@@ -1,3 +1,11 @@
+// https://sass-lang.com/documentation/at-rules/import/#plain-css-imports
+/* stylelint-disable-next-line import-notation */
+@import url('../../app.scss');
+
+// @weapp-vite-keep-import 'xx';
+
+// @use '../../app.wxss';
+
 .s {
   .a {
     color: turquoise;
