--- a/apps/vite-native/app.scss
+++ b/apps/vite-native/app.scss
@@ -1,3 +1,6 @@
 // @import 'tailwindcss/base';
 // @import 'tailwindcss/components';
 // @import 'tailwindcss/utilities';
+.hahaha {
+  color: rosybrown;
+}
