--- a/apps/native-ts/miniprogram/pages/index/index.scss
+++ b/apps/native-ts/miniprogram/pages/index/index.scss
@@ -1,9 +1,10 @@
-/**index.scss**/
+/** index.scss **/
 page {
-  height: 100vh;
   display: flex;
   flex-direction: column;
+  height: 100vh;
 }
+
 .scrollarea {
   flex: 1;
   overflow-y: hidden;
@@ -13,15 +14,15 @@ page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #aaa;
   width: 80%;
+  color: #aaa;
 }
 
 .userinfo-avatar {
-  overflow: hidden;
   width: 128rpx;
   height: 128rpx;
   margin: 20rpx;
+  overflow: hidden;
   border-radius: 50%;
 }
 
@@ -30,11 +31,11 @@ page {
 }
 
 .avatar-wrapper {
-  padding: 0;
   width: 56px !important;
-  border-radius: 8px;
+  padding: 0;
   margin-top: 40px;
   margin-bottom: 40px;
+  border-radius: 8px;
 }
 
 .avatar {
@@ -44,13 +45,13 @@ page {
 }
 
 .nickname-wrapper {
+  box-sizing: border-box;
   display: flex;
   width: 100%;
   padding: 16px;
-  box-sizing: border-box;
-  border-top: 0.5px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 0.5px solid rgba(0, 0, 0, 0.1);
   color: black;
+  border-top: 0.5px solid rgb(0 0 0 / 10%);
+  border-bottom: 0.5px solid rgb(0 0 0 / 10%);
 }
 
 .nickname-label {
