--- a/apps/vite-native-ts/miniprogram/pages/index/index.wxml
+++ b/apps/vite-native-ts/miniprogram/pages/index/index.wxml
@@ -21,7 +21,7 @@
       </block>
     </view>
     <view class="usermotto">
-      <text class="user-motto text-[#4343ff] bg-[#323284]">{{motto}}</text>
+      <text class="user-motto text-[#31c034] bg-[#323284]">{{motto}}</text>
     </view>
   </view>
 </scroll-view>
