chore(deps): upgrade

--- a/apps/vite-native/app.scss
+++ b/apps/vite-native/app.scss
@@ -1,6 +1,7 @@
-// @import 'tailwindcss/base';
-// @import 'tailwindcss/components';
-// @import 'tailwindcss/utilities';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 .hahaha {
   color: rosybrown;
 }
