chore(deps): upgrade

--- a/apps/vite-native/pages/index/index.scss
+++ b/apps/vite-native/pages/index/index.scss
@@ -1,6 +1,6 @@
 // https://sass-lang.com/documentation/at-rules/import/#plain-css-imports
 /* stylelint-disable-next-line import-notation */
-@import url('../../app.scss');
+// @import url('../../app.scss');
 
 // @weapp-vite-keep-import 'xx';
 
