feat: add weapp-tailwindcss style

--- a/apps/vite-native/app.css
+++ b/apps/vite-native/app.css
@@ -1,5 +1,8 @@
 /* @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities'; */
-@import 'tailwindcss';
+
+/* @import 'tailwindcss'; */
+
+@import 'weapp-tailwindcss';
 @config "./tailwind.config.js";
