docs: add weapp-vite docs

--- a/apps/vite-native/app.css
+++ b/apps/vite-native/app.css
@@ -5,4 +5,4 @@
 /* @import 'tailwindcss'; */
 
 @import 'weapp-tailwindcss';
-@config "./tailwind.config.js";
+/* @config "./tailwind.config.js"; */
