--- a/packages/postcss/test/fixtures/css/v4.out.css
+++ b/packages/postcss/test/fixtures/css/v4.out.css
@@ -663,52 +663,52 @@ body:not(#n) {
   }
 .space-y-0:not(#n):not(#n):not(#n)>view+view {
     --tw-space-y-reverse: 0;
-    margin-top: calc((var(--spacing) * 0) * var(--tw-space-y-reverse));
-    margin-top: calc(calc(var(--spacing) * 0) * var(--tw-space-y-reverse));
-    margin-bottom: calc((var(--spacing) * 0) * (1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(calc(var(--spacing) * 0) * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc((var(--spacing) * 0) * var(--tw-space-y-reverse));
+    margin-bottom: calc(calc(var(--spacing) * 0) * var(--tw-space-y-reverse));
+    margin-top: calc((var(--spacing) * 0) * (1 - var(--tw-space-y-reverse)));
+    margin-top: calc(calc(var(--spacing) * 0) * calc(1 - var(--tw-space-y-reverse)));
   }
 .space-y-1:not(#n):not(#n):not(#n)>view+view {
     --tw-space-y-reverse: 0;
-    margin-top: calc((var(--spacing) * 1) * var(--tw-space-y-reverse));
-    margin-top: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
-    margin-bottom: calc((var(--spacing) * 1) * (1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc((var(--spacing) * 1) * var(--tw-space-y-reverse));
+    margin-bottom: calc(calc(var(--spacing) * 1) * var(--tw-space-y-reverse));
+    margin-top: calc((var(--spacing) * 1) * (1 - var(--tw-space-y-reverse)));
+    margin-top: calc(calc(var(--spacing) * 1) * calc(1 - var(--tw-space-y-reverse)));
   }
 .space-y-2:not(#n):not(#n):not(#n)>view+view {
     --tw-space-y-reverse: 0;
-    margin-top: calc((var(--spacing) * 2) * var(--tw-space-y-reverse));
-    margin-top: calc(calc(var(--spacing) * 2) * var(--tw-space-y-reverse));
-    margin-bottom: calc((var(--spacing) * 2) * (1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc((var(--spacing) * 2) * var(--tw-space-y-reverse));
+    margin-bottom: calc(calc(var(--spacing) * 2) * var(--tw-space-y-reverse));
+    margin-top: calc((var(--spacing) * 2) * (1 - var(--tw-space-y-reverse)));
+    margin-top: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
   }
 .space-y-5:not(#n):not(#n):not(#n)>view+view {
     --tw-space-y-reverse: 0;
-    margin-top: calc((var(--spacing) * 5) * var(--tw-space-y-reverse));
-    margin-top: calc(calc(var(--spacing) * 5) * var(--tw-space-y-reverse));
-    margin-bottom: calc((var(--spacing) * 5) * (1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(calc(var(--spacing) * 5) * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc((var(--spacing) * 5) * var(--tw-space-y-reverse));
+    margin-bottom: calc(calc(var(--spacing) * 5) * var(--tw-space-y-reverse));
+    margin-top: calc((var(--spacing) * 5) * (1 - var(--tw-space-y-reverse)));
+    margin-top: calc(calc(var(--spacing) * 5) * calc(1 - var(--tw-space-y-reverse)));
   }
 .space-y-6:not(#n):not(#n):not(#n)>view+view {
     --tw-space-y-reverse: 0;
-    margin-top: calc((var(--spacing) * 6) * var(--tw-space-y-reverse));
-    margin-top: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
-    margin-bottom: calc((var(--spacing) * 6) * (1 - var(--tw-space-y-reverse)));
-    margin-bottom: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc((var(--spacing) * 6) * var(--tw-space-y-reverse));
+    margin-bottom: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+    margin-top: calc((var(--spacing) * 6) * (1 - var(--tw-space-y-reverse)));
+    margin-top: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
   }
 .space-x-2:not(#n):not(#n):not(#n)>view+view {
     --tw-space-x-reverse: 0;
-    margin-left: calc((var(--spacing) * 2) * var(--tw-space-x-reverse));
-    margin-left: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
-    margin-right: calc((var(--spacing) * 2) * (1 - var(--tw-space-x-reverse)));
-    margin-right: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc((var(--spacing) * 2) * var(--tw-space-x-reverse));
+    margin-right: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
+    margin-left: calc((var(--spacing) * 2) * (1 - var(--tw-space-x-reverse)));
+    margin-left: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
   }
 .space-x-4:not(#n):not(#n):not(#n)>view+view {
     --tw-space-x-reverse: 0;
-    margin-left: calc((var(--spacing) * 4) * var(--tw-space-x-reverse));
-    margin-left: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
-    margin-right: calc((var(--spacing) * 4) * (1 - var(--tw-space-x-reverse)));
-    margin-right: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
+    margin-right: calc((var(--spacing) * 4) * var(--tw-space-x-reverse));
+    margin-right: calc(calc(var(--spacing) * 4) * var(--tw-space-x-reverse));
+    margin-left: calc((var(--spacing) * 4) * (1 - var(--tw-space-x-reverse)));
+    margin-left: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-x-reverse)));
   }
 .gap-y-1d5:not(#n):not(#n):not(#n) {
     row-gap: calc(var(--spacing) * 1.5);
