docs: add icons for tailwindcss@4

--- a/apps/vite-native/app.css
+++ b/apps/vite-native/app.css
@@ -3,6 +3,5 @@
 @import 'tailwindcss/utilities'; */
 
 /* @import 'tailwindcss'; */
-
 @import 'weapp-tailwindcss';
-/* @config "./tailwind.config.js"; */
+@config "./tailwind.config.js";
