--- a/packages/weapp-tailwindcss/index.css
+++ b/packages/weapp-tailwindcss/index.css
@@ -1,5 +1,3 @@
-@layer theme, base, components, utilities;
-
-@import './theme.css' layer(theme);
-@import './preflight.css' layer(base);
-@import './utilities.css' layer(utilities);
+@import './theme.css';
+@import './preflight.css';
+@import './utilities.css';
