--- a/packages/postcss/test/fixtures/css/v4.1.1.out.css
+++ b/packages/postcss/test/fixtures/css/v4.1.1.out.css
@@ -2,7 +2,7 @@
 ::before,::after {
       --tw-content: "";
 }
-view,text,::before,::after,::backdrop {
+::before,::after,::backdrop {
       --tw-shadow: 0 0 rgba(0,0,0,0);
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
@@ -31,15 +31,11 @@ view,text,::before,::after,::backdrop {
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
       --tw-content: "";
-      box-sizing: border-box;
-      border-width: 0;
-      border-style: solid;
-      border-color: currentColor;
     }
-page,:host {
+:root,:host {
   --color-zinc-800: rgb(39, 39, 42);
 }
-view,text,::after,::before,::backdrop {
+::after,::before,::backdrop {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
