chore: bump version

--- a/packages/weapp-tailwindcss/preflight.css
+++ b/packages/weapp-tailwindcss/preflight.css
@@ -1,15 +1,9 @@
-/*
-  1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
-  2. Remove default margins and padding
-  3. Reset all borders.
-*/
-
 *,
-::after,
-::before,
+:after,
+:before,
 ::backdrop {
-  box-sizing: border-box; /* 1 */
-  margin: 0; /* 2 */
-  padding: 0; /* 2 */
-  border: 0 solid; /* 3 */
+  box-sizing: border-box;
+  border: 0 solid;
+  margin: 0;
+  padding: 0;
 }
