--- a/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.css
+++ b/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.css
@@ -37,16 +37,16 @@ view,text,::before,::after,::backdrop {
       border-color: currentColor;
     }
 page,:host {
-  --color-zinc-800: rgb(39, 39, 42);
+  --color-zinc-800: rgb(39, 39, 42) ;
 }
-view,text,::after,::before,::backdrop {
+view,text,:after,:before,::backdrop {
   box-sizing: border-box;
+  border: 0 solid;
   margin: 0;
   padding: 0;
-  border: 0 solid;
 }
 .shadow {
-  --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgba(0, 0, 0, 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgba(0, 0, 0, 0.1));
+  --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgba(0,0,0,0.10196)), 0 1px 2px -1px var(--tw-shadow-color, rgba(0,0,0,0.10196));
   box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
 .invert {
