--- a/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.before.css
+++ b/packages/weapp-tailwindcss/test/fixtures/css/v4-weapp-tailwindcss-default-output.before.css
@@ -34,9 +34,12 @@
   }
 }
 :root, :host {
-  --color-zinc-800: oklch(.274 .006 286.033) ;
+  --color-zinc-800: oklch(0.274 0.006 286.033);
 }
-*, :after, :before, ::backdrop {
+*,
+:after,
+:before,
+::backdrop {
   box-sizing: border-box;
   border: 0 solid;
   margin: 0;
